--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -90,6 +91,9 @@ $RECYCLE.BIN/
 
 ## File-based project format:
 *.iws
+
+## Added by Zoe
+.idea/*.iml
 
 ## Plugin-specific files:
 
